# gh-config

./: .gitignore  CHANGELOG.md  Cargo.toml  go.mod  go.sum  main.go
.github/workflows/: build.yaml  go.yml
golang/: go.mod  main.go
golang/internal/: winget.go
golang/internal/unzip/: unzip.go
internal/: downloader.go  explorer.go  font.go  git.go  unzip.go
internal/downloader/: downloader.go
internal/explorer/: explorer.go
internal/font/: font.go
internal/git/: git.go
node/: package.json  pnpm-lock.yaml  tsconfig.json
node/src/: index.ts
node/src/cli/: cli.ts
rust/: .gitignore  Cargo.toml
rust/src/: main.rs
rust/src/config/: create_file.rs  mod.rs  os.rs  read_file.rs  schema.rs  writer.rs
rust/src/logger/: custom.rs
rust/src/utils/: checksum.rs  commands.rs  downloader.rs  mod.rs  unzip.rs
src/: main.rs
src/logger/: custom.rs
src/utils/: commands.rs  downloader.rs  unzip.rs
