
[package]
name = "rust"
version = "2.0.0"
edition = "2021"

[[bin]]
name = "gh-config"  # Change this to the desired binary name
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
crypto = "0.5.1"
sha256 = "1.5.0"
webbrowser = "0.8.13"
