
[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "gh-config"  # Change this to the desired binary name
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
zip = "0.6.6"
